--- a/index.html
+++ b/index.html
@@ -277,19 +277,11 @@ $(document).ready(function () {
 </div>
 
 
-<p>北半球北纬25°~35°之间的中纬度地带，在副热带高压和热带气旋影响下，大部分地区炎热干旱，大部区域分布的是荒漠和半荒漠，而我国在这一纬度地区，在季风气候影响下，发育着一种独特的植被类型——“常绿阔叶林”。常绿阔叶林的物种多样性仅次于热带雨林，是地球上重要的基因库。以我国为例，常绿阔叶林中维管束植物的种类不少于10000种(陈灵芝等,
-2004)，全国11个陆地生物多样性保护关键区域，一半位于常绿阔叶林分布区内(中国生物多样性国情研究报告编写组,
-1998)。</p>
+<p>北半球北纬25°~35°之间的中纬度地带，在副热带高压和热带气旋影响下，大部分地区炎热干旱，大部区域分布的是荒漠和半荒漠，而我国在这一纬度地区，在季风气候影响下，发育着一种独特的植被类型——“常绿阔叶林”。常绿阔叶林的物种多样性仅次于热带雨林，是地球上重要的基因库。以我国为例，常绿阔叶林中维管束植物的种类不少于10000种，全国11个陆地生物多样性保护关键区域，一半位于常绿阔叶林分布区内。</p>
 <p><img src="Pictures/EBLF_Map_Global_SongBook_Page9.jpg" /></p>
-<p>常绿阔叶林分布地区气候温暖湿润，物产丰富，最适合人类居住。日本人把常绿阔叶林视为日本民族的发祥地，把日本文化称之为“常绿阔叶林文化”。我国长江流域和珠江流域，以及五千年前的黄河流域都是常绿阔叶林分布地区，中华民族和中华文化也是在常绿阔叶林中孕育发展的。但在一个相当长的时期内，对这一独特的植被类型并未引起人们的足够重视，国际上在论述常绿阔叶林时，总是以地中海地区的照叶林为例，偶尔提到亚洲的常绿阔叶林也很简单(Ovington,
-1983)。20世纪70年代开始，这一植被类型才引起国际植被学界的关注。目前，日本(Fujiwara,
-1981,1982,1983,1986)、美国(Box &amp; Fujiwara,1988; Fujiwara &amp;
-Box,1994), 以及新西兰(Wardle,1983)、澳大利亚(Ovington &amp;
-Pryor,1983)、西班牙（Wildpret, et al., 1997; Ohsawa et al.,
-1999）等国都进行了常绿阔叶林研究，特别是日本学者的研究已扩展到欧洲以及我国大陆和台湾（Miyawaki
-et al., 1981; Hara et al., 1997）。</p>
+<p>常绿阔叶林分布地区气候温暖湿润，物产丰富，最适合人类居住。我国长江流域和珠江流域，以及五千年前的黄河流域都是常绿阔叶林分布地区，中华民族和中华文化也是在常绿阔叶林中孕育发展的。但在一个相当长的时期内，对这一独特的植被类型并未引起人们的足够重视，国际上在论述常绿阔叶林时，总是以地中海地区的照叶林为例，偶尔提到亚洲的常绿阔叶林也很简单。20世纪70年代开始，这一植被类型才引起国际植被学界的关注。</p>
 <p><img src="Pictures/%E5%A4%A9%E7%AB%A5-%E6%9D%A8%E5%BA%86%E6%9D%BE-1.jpg" /></p>
-<p>常绿阔叶林在我国分布最广，南北纵跨约10个纬度（23°<sub>33°N），东西横贯约25个经度（98°</sub>123°E），如果把东喜马拉雅山地上分布的常绿阔叶林也计算在内，则可延伸到91°E。我国常绿阔叶林类型复杂多样，乃是全球常绿阔叶林的主体，但是长期以来人们对它的重要性认识不足，常常把它当成不成才的“杂木林”而屡遭砍伐，致使目前在它的分布区内留存的面积已很稀少，不到总面积的4%。因此，对中国常绿阔叶林进行全面系统的研究是中国生态学工作者义不容辞的责任。</p>
+<p>常绿阔叶林在我国分布最广，南北纵跨约10个纬度（23°<sub>33°N），东西横贯约25个经度（98°</sub>123°E），如果把东喜马拉雅山地上分布的常绿阔叶林也计算在内，则可延伸到91°E。我国常绿阔叶林类型复杂多样，乃是全球常绿阔叶林的主体，但是长期以来人们对它的重要性认识不足，常常把它当成不成才的“杂木林”而屡遭砍伐，致使目前在它的分布区内留存的面积已很稀少，不到总面积的4%。</p>
 <p><img src="Pictures/%E5%A4%A9%E7%AB%A5-%E6%9D%A8%E5%BA%86%E6%9D%BE.jpg" /></p>
 
 
