--- a/data.html
+++ b/data.html
@@ -11,12 +11,12 @@
 
 
 
-<title>data</title>
+<title> </title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/readable.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -30,7 +30,7 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">常绿阔叶林</a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">常绿阔叶林</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -272,15 +272,46 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">data</h1>
+<h1 class="title toc-ignore"> </h1>
 
 </div>
 
 
 <div id="群丛和群落表" class="section level2">
-<h2>群丛和群落表</h2>
+<h2><span style="color: blue;">群丛和群落表</span></h2>
+<div id="注本数据库仍在进一步更新中如需更多信息请联系我们"
+class="section level4">
+<h4><span
+style="color: red;">注：本数据库仍在进一步更新中。如需更多信息，请联系我们</span></h4>
+</div>
+<div id="部分信息请访问本链接" class="section level4">
+<h4>部分信息请访问<a
+href="https://github.com/eblfChina/eblfChina.github.io/tree/main/DataAlliance">本链接</a></h4>
+<p><img src="Pictures/AllianceData_snapshot.jpg" /></p>
+<p><br></p>
+</div>
 </div>
 
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<body>
+
+
+
+<hr>
+<center>
+Copyright © <a href="mailto:zhangjian6@mail.sysu.edu.cn">Jian Zhang</a> 2025 –
+<script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script>
+<div class="line-block">Created using <a href="https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html">rmarkdown</a></div>
+</center>
+
+
+</body>
+</html>
 
 
 
