--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/readable.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -30,7 +30,7 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">常绿阔叶林</a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">常绿阔叶林</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -277,13 +277,45 @@ $(document).ready(function () {
 </div>
 
 
-<p>北半球北纬25°~35°之间的中纬度地带，在副热带高压和热带气旋影响下，大部分地区炎热干旱，大部区域分布的是荒漠和半荒漠，而我国在这一纬度地区，在季风气候影响下，发育着一种独特的植被类型——“常绿阔叶林”。常绿阔叶林的物种多样性仅次于热带雨林，是地球上重要的基因库。以我国为例，常绿阔叶林中维管束植物的种类不少于10000种，全国11个陆地生物多样性保护关键区域，一半位于常绿阔叶林分布区内。</p>
+<p>北半球北纬25°-35°之间的中纬度地带，在副热带高压和热带气旋影响下，大部分地区炎热干旱，大部区域分布的是荒漠和半荒漠，而我国在这一纬度地区，在季风气候影响下，发育着一种独特的植被类型——“常绿阔叶林”。常绿阔叶林的物种多样性仅次于热带雨林，是地球上重要的基因库。以我国为例，常绿阔叶林中维管束植物的种类不少于10000种，全国11个陆地生物多样性保护关键区域，一半位于常绿阔叶林分布区内。</p>
 <p><img src="Pictures/EBLF_Map_Global_SongBook_Page9.jpg" /></p>
+<center>
+常绿阔叶林的全球分布（Source: 宋永昌《中国常绿阔叶林》）
+</center>
+<p><br></p>
 <p>常绿阔叶林分布地区气候温暖湿润，物产丰富，最适合人类居住。我国长江流域和珠江流域，以及五千年前的黄河流域都是常绿阔叶林分布地区，中华民族和中华文化也是在常绿阔叶林中孕育发展的。但在一个相当长的时期内，对这一独特的植被类型并未引起人们的足够重视，国际上在论述常绿阔叶林时，总是以地中海地区的照叶林为例，偶尔提到亚洲的常绿阔叶林也很简单。20世纪70年代开始，这一植被类型才引起国际植被学界的关注。</p>
-<p><img src="Pictures/%E5%A4%A9%E7%AB%A5-%E6%9D%A8%E5%BA%86%E6%9D%BE-1.jpg" /></p>
+<img src="Pictures/%E5%A4%A9%E7%AB%A5-%E6%9D%A8%E5%BA%86%E6%9D%BE-1.jpg" />
+<center>
+浙江天童山的常绿阔叶林（Source: 杨庆松）
+</center>
+<p><br></p>
 <p>常绿阔叶林在我国分布最广，南北纵跨约10个纬度（23°<sub>33°N），东西横贯约25个经度（98°</sub>123°E），如果把东喜马拉雅山地上分布的常绿阔叶林也计算在内，则可延伸到91°E。我国常绿阔叶林类型复杂多样，乃是全球常绿阔叶林的主体，但是长期以来人们对它的重要性认识不足，常常把它当成不成才的“杂木林”而屡遭砍伐，致使目前在它的分布区内留存的面积已很稀少，不到总面积的4%。</p>
 <p><img src="Pictures/%E5%A4%A9%E7%AB%A5-%E6%9D%A8%E5%BA%86%E6%9D%BE.jpg" /></p>
+<center>
+浙江天童寺及其周围的常绿阔叶林景观（Source: 杨庆松）
+</center>
+<p><br></p>
 
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<body>
+
+
+
+<hr>
+<center>
+Copyright © <a href="mailto:zhangjian6@mail.sysu.edu.cn">Jian Zhang</a> 2025 –
+<script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script>
+<div class="line-block">Created using <a href="https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html">rmarkdown</a></div>
+</center>
+
+
+</body>
+</html>
 
 
 
