--- a/reference.html
+++ b/reference.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/readable.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -30,7 +30,7 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">常绿阔叶林</a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">常绿阔叶林</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -277,8 +277,55 @@ $(document).ready(function () {
 </div>
 
 
+<ul>
+<li><p>宋永昌.1994.
+关于常绿阔叶林名称和类型划分的问题.（见：姜恕、陈昌笃主编：植被生态学研究.
+北京:科学出版社. p.189-199</p></li>
+<li><p>宋永昌，徐国士，陈伟烈，王希华，达良俊，陈添财. 2003.
+台湾常绿阔叶林主要类型及其与大陆常绿阔叶林的关系. 植物生态学报, ,27 (6):
+719-732.</p></li>
+<li><p>宋永昌, 王祥荣. 1995. 浙江天童国家森林公园的植被和区系.
+上海:上海科学技术文献出版社</p></li>
+<li><p>宋永昌, 徐国士，陈伟烈，王希华，达良俊，陈添财. 2003.
+台湾常绿阔叶林主要类型及其与大陆常绿阔叶林的关系. 植物生态学报, ,27 (6):
+719-732.</p></li>
+<li><p>宋永昌. 2004. 中国常绿阔叶林分类试行方案 植物生态学报, 28(4):
+435-448. Song Yong-Chang. 2004. Tentative Classification Scheme of
+Evergreen Broad-leaved forests of China, Acta Phytoeclogica Sinica,
+28(4):435-448 ( in Chinese with English abstract).</p></li>
+<li><p>宋永昌. 2011. 对中国植被分类系统的认知和建议. 植物生态学报, ,35
+(8): 882-892.</p></li>
+<li><p>宋永昌, 王希华, 阎恩荣. 2013. 中国常绿阔叶林-分类，生态，保育.
+北京：科学出版社，801+558页. Song, Y C , Wang X H, Yan E R. 2013.
+Evergreen forest in China: Classification Ecology Conservation, Science
+Press, Beijing. 801p. (in Chinese)</p></li>
+<li><p>宋永昌, 阎恩荣, 宋坤. 2017. 再议中国的植被分类系统. 植物生态学报,
+, 41 (2): 269-278.</p></li>
+<li><p>宋永昌. 2017.
+植被生态学（2版），北京：高等教育出版社，697页</p></li>
+</ul>
 <p><img src="Pictures/EBLF-Book.png" /></p>
 
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<body>
+
+
+
+<hr>
+<center>
+Copyright © <a href="mailto:zhangjian6@mail.sysu.edu.cn">Jian Zhang</a> 2025 –
+<script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script>
+<div class="line-block">Created using <a href="https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html">rmarkdown</a></div>
+</center>
+
+
+</body>
+</html>
 
 
 
