--- a/EBLF.html
+++ b/EBLF.html
@@ -361,20 +361,20 @@ class="latin">Typical evergreen broad-leaved forests Formation</span>
 <details open>
 <summary>
 <span class="sys - tier tier2">IA. 东亚典型常绿阔叶林群落门</span><span
-class="latin">East Asia typical EBLF Division =Lithocarpodo -
-Cyclobalanopsiea</span>
+class="latin">East Asia typical EBLF Division
+=Lithocarpodo-Cyclobalanopsiea</span>
 </summary>
 <details close>
 <summary>
 <span class="sys - tier tier3">IA-1. 大陆东部典型常绿阔叶林</span><span
-class="latin"><em>Camellio cuspidatae</em> - <em>Cyclobalanopsietea
+class="latin"><em>Camellio cuspidatae</em>-<em>Cyclobalanopsietea
 glaucae</em></span>
 </summary>
 <!-- 柯-青冈群落目 -->
 <details open>
 <summary>
 <span class="sys - tier tier4">1. 柯-青冈群落目</span><span
-class="latin">Lithocarpodo - Cyclobalanopsietalia</span>
+class="latin">Lithocarpodo-Cyclobalanopsietalia</span>
 </summary>
 <details close>
 <summary>
@@ -388,9 +388,9 @@ Southeastern Hills</span>
 <summary>
 <h6>
 1）<a href="Alli-1a1.html">苦槠-柯-青冈群团</a><span class="sys - code">
-<a href="Alli-1a1.html"><em>Castanopsis sclerophylla</em> -
-<em>Lithocarpus glaber</em> - <em>Cyclobalanopsis glauca</em>
-All.</a></span>
+<a href="Alli-1a1.html"><em>Castanopsis
+sclerophylla</em>-<em>Lithocarpus glaber</em> - <em>Cyclobalanopsis
+glauca</em> All.</a></span>
 </h6>
 </summary>
 <div>
@@ -402,8 +402,8 @@ All.</a></span>
 <details open>
 <summary>
 <h6>
-2）赤皮青冈-小叶青冈群团<span class="sys - code">Cyclobalanopsis gilva -
-Cyclobalanopsis myrsinaefolia All.</span>
+2）赤皮青冈-小叶青冈群团<span class="sys - code"><em>Cyclobalanopsis
+gilva</em>-<em>Cyclobalanopsis myrsinaefolia</em> All.</span>
 </h6>
 </summary>
 <div>
@@ -414,8 +414,8 @@ Cyclobalanopsis myrsinaefolia All.</span>
 <details open>
 <summary>
 <h6>
-3）云山青冈-细叶青冈群团<span class="sys - code">Cyclobalanopsis
-sessilifolia - Cyclobalanopsis gracilis All.</span>
+3）云山青冈-细叶青冈群团<span class="sys - code"><em>Cyclobalanopsis
+sessilifolia</em>-<em>Cyclobalanopsis gracilis</em> All.</span>
 </h6>
 </summary>
 <div>
@@ -438,8 +438,8 @@ All.</span>
 <details open>
 <summary>
 <h6>
-5）曼青冈 - 多脉青群团<span class="sys - code">Cyclobalanopsis oxyodon -
-Cyclobalanopsis multinervis All.</span>
+5）曼青冈-多脉青群团<span class="sys - code"><em>Cyclobalanopsis
+oxyodon</em>-<em>Cyclobalanopsis multinervis</em> All.</span>
 </h6>
 </summary>
 <div>
@@ -450,15 +450,15 @@ Cyclobalanopsis multinervis All.</span>
 <details close>
 <summary>
 <h5>
-1B. 南岭和秦巴山地群团组<span class="sys - code">Alliance group of
-Nanling &amp; Qinba Mountains</span>
+1B. 南岭山地群团组<span class="sys - code">Alliance group of Nanling
+Mountains</span>
 </h5>
 </summary>
 <details open>
 <summary>
 <h6>
-6）巴东栎 - 包果柯群团<span class="sys - code">Quercus engleriana -
-Lithocarpus cleistocarpus All.</span>
+6）巴东栎-包果柯群团<span class="sys - code"><em>Quercus
+engleriana</em>-<em>Lithocarpus cleistocarpus</em> All.</span>
 </h6>
 </summary>
 <div>
@@ -481,8 +481,8 @@ All.</span>
 <!-- 木荷 - 锥群落目 -->
 <details open>
 <summary>
-<span class="sys - tier tier4">2. 木荷 - 锥群落目</span><span
-class="latin">Schimo - Castanopsietalia</span>
+<span class="sys - tier tier4">2. 木荷-锥群落目</span><span
+class="latin"><em>Schimo-Castanopsietalia</em></span>
 </summary>
 <details close>
 <summary>
@@ -494,12 +494,12 @@ Hills mountains</span>
 <details open>
 <summary>
 <h6>
-8）木荷-甜槠群团<span class="sys - code">Schima superba - Castanopsis
-eyrie All</span>
+8）木荷-甜槠群团<span class="sys - code"><em>Schima
+superba</em>-<em>Castanopsis eyrie</em> All.</span>
 </h6>
 </summary>
 <div>
-分布：我国东南丘陵地区 | 包含多个群丛和群落（详见附表8）
+分布：我国东南丘陵地区 | 包含多个群丛和群落）
 </div>
 <details open>
 <summary>
@@ -508,7 +508,7 @@ eyrie All</span>
 </h6>
 </summary>
 <div>
-包含13个群丛，2个群落（详见附表8a）
+包含13个群丛，2个群落
 </div>
 </details>
 <details open>
@@ -518,7 +518,7 @@ eyrie All</span>
 </h6>
 </summary>
 <div>
-包含2个群丛，6个群落（详见附表8b）
+包含2个群丛，6个群落
 </div>
 </details>
 <details open>
@@ -528,7 +528,7 @@ eyrie All</span>
 </h6>
 </summary>
 <div>
-包含16个群落（需校对核实，详见附表8c）
+包含16个群落（需校对核实）
 </div>
 </details>
 </details>
@@ -540,7 +540,7 @@ argentea All</span>
 </h6>
 </summary>
 <div>
-分布：湖南、江西、广西等地 | 包含3个群丛和5个群落（详见附表9）
+分布：湖南、江西、广西等地 | 包含3个群丛和5个群落
 </div>
 </details>
 <details open>
@@ -551,7 +551,7 @@ Altingia grcilipes All.</span>
 </h6>
 </summary>
 <div>
-分布：福建、浙江、江西等地 | 包含12个群落（详见附表10）
+分布：福建、浙江、江西等地 | 包含12个群落
 </div>
 </details>
 <details open>
@@ -860,7 +860,8 @@ Quercus lanata All. ）</span>
 <details close>
 <summary>
 <span class="sys - tier tier3">IA-3. 台湾山地典型常绿阔叶林</span><span
-class="latin">Litsio acuminatae - Cyclobalanopsietea longinucis</span>
+class="latin"><em>Litsio acuminatae</em>-<em>Cyclobalanopsietea
+longinucis</em></span>
 </summary>
 <details open>
 <summary>
@@ -876,7 +877,7 @@ stenophylloides - Cy. morii - All.）</span>
 </h5>
 </summary>
 <div>
-分布：台湾插天山、达观山等地 | 1个群丛，5个群落（详见附表30）
+分布：台湾插天山、达观山等地 | 1个群丛，5个群落
 </div>
 </details>
 <details open>
@@ -887,7 +888,7 @@ sessilifolia - Cy. longinux All.</span>
 </h5>
 </summary>
 <div>
-分布：台湾太鲁阁等地 | 包含1个群丛，5个群落（详见附表31）
+分布：台湾太鲁阁等地 | 包含1个群丛，5个群落
 </div>
 </details>
 </details>
@@ -946,31 +947,32 @@ micranthum - Beilschmiedia erythrophloia - Machilus All.</span>
 <details open>
 <summary>
 <span class="sys - tier tier1">II. 季节常绿阔叶林群系</span><span
-class="latin">Seasonal evergreen broad - leaved forests Formation</span>
+class="latin">Seasonal evergreen broad-leaved forests Formation</span>
 </summary>
 <!-- 按相同结构构建 -->
 <details open>
 <summary>
 <span class="sys - tier tier2">IIA. 东亚季节常绿阔叶林群落门<span
-class="latin">East Asia Seasonal EBLF Division =Machilo -
-Castanopsiea</span>
+class="latin">East Asia Seasonal EBLF Division
+=Machilo-Castanopsiea</span>
 </summary>
 <details close>
 <summary>
 <span class="sys - tier tier3">IIA-1. 大陆东部季节常绿阔叶林<span
-class="latin">Cryptocaryo chinensii - Castanopsietea</span>
+class="latin">Cryptocaryo chinensii-Castanopsietea</span>
 </summary>
 <details open>
 <summary>
 <span class="sys - tier tier4">10. 马蹄荷-厚壳桂-锥群落目<span
-class="sys - code">Exbucklandio - Cryptocaryo - Castanopsietalia</span>
+class="sys - code">Exbucklandio-Cryptocaryo-Castanopsietalia</span>
 </h4>
 </summary>
 <details close>
 <summary>
 <h5>
-35）厚壳桂-锥树-红锥群团 <span class="sys - code">Cryptocarya -
-Castanopsis chinensis - C.hystrix All.</span>
+35）厚壳桂-锥树-红锥群团 <span
+class="sys - code">Cryptocarya-Castanopsis chinensis-C.hystrix
+All.</span>
 </h5>
 </summary>
 <div>
@@ -1032,7 +1034,7 @@ All.</span>
 </details>
 <details open>
 <summary>
-<span class="sys - tier tier4">11. 樟 - 琼楠 - 润楠群落目 <span
+<span class="sys - tier tier4">11. 樟-琼楠-润楠群落目 <span
 class="sys - code">Cinnamomumo - Beilschmiedio –Machilietalia</span>
 </h4>
 </summary>
@@ -1050,8 +1052,9 @@ levinei - Cinnamomum parthenoxylon - Cinnamomum camphora All</span>
 <details open>
 <summary>
 <h5>
-40）琼楠 - 润楠 - 华润楠群团<span class="sys - code">Beilschmiedia -
-Machilus - Machilus chinensis All</span>
+40）琼楠 - 润楠 - 华润楠群团<span
+class="sys - code">Beilschmiedia-Machilus - Machilus chinensis
+All</span>
 </h5>
 </summary>
 <div>
