--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About This Website</title>
+<title> </title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -272,16 +272,43 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About This Website</h1>
+<h1 class="title toc-ignore"> </h1>
 
 </div>
 
 
-<p>更多信息请联系。</p>
-<p>张健</p>
-<p>宋坤</p>
-<p>孙慕梵</p>
-<p>宋永昌</p>
+<div id="please-contact-us-if-you-have-any-suggestions-and-information"
+class="section level3">
+<h3>Please contact us if you have any suggestions and information</h3>
+</div>
+<div id="更多信息与建议请联系" class="section level3">
+<h3>更多信息与建议请联系</h3>
+<p><br></p>
+<div id="prof.-jian-zhang-张健" class="section level4">
+<h4>Prof. Jian Zhang (张健)</h4>
+<p>School of Life Sciences, Sun Yat-sen University</p>
+<p>Email: <a href="mailto:zhangjian6@mail.sysu.edu.cn"
+class="email">zhangjian6@mail.sysu.edu.cn</a></p>
+<p>Lab page: <a href="https://ecoinfor.github.io/"
+class="uri">https://ecoinfor.github.io/</a></p>
+<p><br></p>
+</div>
+<div id="prof.-kun-song-宋坤" class="section level4">
+<h4>Prof. Kun Song (宋坤)</h4>
+<p>School of Ecological and Environmental Sciences, East China Normal
+University</p>
+<p>Email: <a href="mailto:ksong@des.ecnu.edu.cn"
+class="email">ksong@des.ecnu.edu.cn</a></p>
+<p><br></p>
+</div>
+<div id="prof.-yongchang-song-宋永昌" class="section level4">
+<h4>Prof. Yongchang Song (宋永昌)</h4>
+<p>School of Ecological and Environmental Sciences, East China Normal
+University</p>
+<p>Email: <a href="mailto:ycsong@des.ecnu.edu.cn"
+class="email">ycsong@des.ecnu.edu.cn</a></p>
+</div>
+</div>
 
 <!DOCTYPE html>
 
