--- a/data.html
+++ b/data.html
@@ -277,16 +277,30 @@ $(document).ready(function () {
 </div>
 
 
-<div id="群丛和群落表" class="section level2">
-<h2><span style="color: blue;">群丛和群落表</span></h2>
-<div id="注本数据库仍在进一步更新中如需更多信息请联系我们"
+<div
+id="vegetation-data-for-plant-associations-and-communities-群丛和群落表"
+class="section level3">
+<h3><span style="color: blue;">Vegetation data for plant associations
+and communities (群丛和群落表)</span></h3>
+<p><br></p>
+<div id="注本数据库仍在进一步更新中" class="section level4">
+<h4><span style="color: red;">注：本数据库仍在进一步更新中</span></h4>
+</div>
+<div id="note-we-still-need-some-tiome-to-update-the-data"
 class="section level4">
-<h4><span
-style="color: red;">注：本数据库仍在进一步更新中。如需更多信息，请联系我们</span></h4>
+<h4><span style="color: red;">NOTE: We still need some tiome to update
+the data</span></h4>
+<p><br></p>
 </div>
 <div id="部分信息请访问本链接" class="section level4">
 <h4>部分信息请访问<a
 href="https://github.com/eblfChina/eblfChina.github.io/tree/main/DataAlliance">本链接</a></h4>
+</div>
+<div id="a-small-part-of-the-data-can-be-found-here"
+class="section level4">
+<h4>A small part of the data can be found <a
+href="https://github.com/eblfChina/eblfChina.github.io/tree/main/DataAlliance">HERE</a></h4>
+<p><br></p>
 <p><img src="Pictures/AllianceData_snapshot.jpg" /></p>
 <p><br></p>
 </div>
